# devil

./: .RData  .Rbuildignore  .Rhistory  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  configure  devil.Rproj  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  bioc-check.yaml
R/: RcppExports.R  beta.R  devil-package.R  group_data.R  main.R  main_w_summary.R  overdispersion.R  plot_volcano.R  size_factors.R  test.R  variance.R
articles/: DE_with_multiple_features.html  DE_with_multiple_features.md  Introduction.html  continuousCov.html  continuousCov.md  continuous_covariate.html  continuous_covariate.md  devil_GPU_v_CPU.html  devil_GPU_v_CPU.md  devil_model.html  devil_model.md  getStarted.html  getStarted.md  get_started.html  get_started.md  gpuSetup.html  gpuSetup.md  gpu_setup.html  gpu_setup.md  index.html  index.md  multiple_covariates.html  multiple_covariates.md  quickSetup.html  quickSetup.md  quick_setup.html  quick_setup.md
articles/articles/: Introduction.html  getStarted.html
cuda/: CMakeLists.txt
cuda/src/: batch.cpp  batch.hpp  einsum.cpp  einsum.hpp  inverse.cpp  inverse.hpp  kernel.cu  kernel.h  test.cpp  test_dataset.cpp  utils.hpp
inst/: CITATION
man/: calculate_sf.Rd  compute_offset_vector.Rd  compute_sandwich.Rd  cpu_fit_sparse_cpp.Rd  devil-package.Rd  edgeR_sf.Rd  estimate_dispersion.Rd  fit_devil.Rd  fit_devil_summary.Rd  fit_dispersion.Rd  group_data.Rd  init_beta.Rd  init_beta_groups.Rd  normed_sum_sf.Rd  plot_volcano.Rd  psinorm_sf.Rd  test_de.Rd
news/: index.html  index.md
python/: README.md  pyproject.toml
python/devil/: __init__.py  beta.py  beta_gpu.py  gpu.py  main.py  overdispersion.py  overdispersion_gpu.py  plot.py  size_factors.py  test.py  utils.py  variance.py  variance_gpu.py
python/examples/: gpu_demo.py
python/notebooks/: vignette-py.ipynb
python/scripts/: baron-pancreas-full.py
python/tests/: conftest.py  test_beta.py  test_error_handling.py  test_gpu.py  test_integration.py  test_main.py  test_overdispersion.py  test_plot.py  test_size_factors.py  test_test.py  test_utils.py  test_variance.py
reference/: calculate_sf.html  calculate_sf.md  compute_offset_vector.html  compute_offset_vector.md  compute_sandwich.html  compute_sandwich.md  devil-package.html  devil-package.md  devil.html  edgeR_sf.html  edgeR_sf.md  estimate_dispersion.html  estimate_dispersion.md  fit_devil.html  fit_devil.md  fit_dispersion.html  fit_dispersion.md  group_data.html  group_data.md  index.html  index.md  init_beta.html  init_beta.md  init_beta_groups.html  init_beta_groups.md  normed_sum_sf.html  normed_sum_sf.md  plot_volcano.html  plot_volcano.md  psinorm_sf.html  psinorm_sf.md  test_de.html  test_de.md
src/: .gitignore  Makevars  RcppExports.cpp  beta.cpp  beta_and_overdispersion.cpp  beta_group.cpp  beta_init_univariate.cpp  fitting_with_summary.cpp  mom_overdispersion.cpp  new_overdispersion.cpp  overdispersion.cpp  sparse_fit.cpp  variance.cpp
tests/: testthat.R
tests/testthat/: test-beta.R  test-main.R  test-overdispersion.R  test-plot_volcano.R  test-size_factors.R  test-test.R  test-variance.R
tmp/: test_performance.py  test_statistical_validation.py
vignettes/: DE_with_multiple_features.Rmd  continuousCov.Rmd  continuous_covariate.Rmd  devil_GPU_v_CPU.Rmd  devil_model.Rmd  getStarted.Rmd  get_started.Rmd  gpuSetup.Rmd  gpu_setup.Rmd  multiple_covariates.Rmd  quickSetup.Rmd  quick_setup.Rmd
vignettes/articles/: Differential-expression-with-complex-designs-using-devil.Rmd  Introduction.Rmd  getStarted.Rmd  gpuSetup.Rmd  quickSetup.Rmd
